# eDoc

./: .gitignore  docker-compose.yml
backend/ai-service/: .dockerignore  Dockerfile  pyproject.toml
backend/ai-service/app/: main.py
backend/ai-service/app/api/controllers/: ai_controller.py
backend/ai-service/app/core/: config.py  security.py
backend/ai-service/app/schemas/: ai.py
backend/ai-service/app/services/: ai_service.py  integration_service.py
backend/ai-service/app/utils/: http_client.py
backend/api-gateway/: Dockerfile  pom.xml
backend/appointment-service/: Dockerfile  pom.xml
backend/doctor-service/: Dockerfile  pom.xml
backend/feedback-service/: Dockerfile  pom.xml
backend/notification-service/: Dockerfile  pom.xml
backend/patient-service/: .dockerignore  .gitignore  Dockerfile  pom.xml
backend/payment-service/: .env.example  Dockerfile  pom.xml
backend/telemedicine-service/: Dockerfile  pom.xml
backend/user-service/: Dockerfile  pom.xml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/api/: aiApi.ts  appointmentApi.ts  dashboardApi.ts  doctorApi.ts  feedbackApi.ts  notificationApi.ts  patientApi.ts  paymentApi.ts  telemedicineApi.ts  userApi.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: app-sidebar.tsx  dashboard-layout.tsx  top-header.tsx
frontend/lib/: sidebar-nav.ts
frontend/store/: store.ts
infra/: generate-infra.ps1
infra/docker/: README.md
k8s/: README.md  edoc-simple.yaml
postman/: patient-service-updated.postman_collection.json
(+392 files in other folders)
